# libmad

./: .gitignore  CHANGES  COPYRIGHT  CREDITS  Makefile.am  Makefile.aos3  Makefile.emx  Makefile.in  Makefile.os2  Makefile.vbcc  OWMakefile.win32  README  TIMINGS  TODO  VERSION  Version_script  acconfig.h  bit.c  bit.h  config.h.in  configure.ac  configure.in  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  global.h  huffman.c  huffman.h  imdct_l_arm.S  layer12.c  layer12.h  layer3.c  layer3.h  libmad.def  libmad.exports  libmad.h  mad.c  (+12 more)
msvc++/: config.h  libmad.dsp  mad.h
patches/: 000-libmad-0.15.1b-ppc.patch  004-Provide-Thumb-2-alternative-code-for-MAD_F_MLN.diff  005b-mips-gcc4.4-gentoo.diff  006-watcom-asm.patch  007-md_size.diff  008-length-check.patch  009-autotools.patch  009-don-t-use-else-after-return.patch  010-don-t-assign-in-if.patch  011-fix-Wstringop-overflow.patch  012-aarch64-arm64-amd64.patch
